--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@ group: home
 	<div id="journal-articles-block">
 	{% for post in paginator.posts %}
 		<div class="journal-article">
-			<div class="journal-post-info">
-				{% assign categories_list = post.categories %}
-				{% assign category = categories_list.first %}
-				{% include themes/Snail/category.html %}
-				{% assign categories_list = nil %}
-			</div>
 			<div class="journal-body">
+
+
 				<h1 class="journal-title"><a href="{{ post.url }}">{{ post.title }}</a><span class="author">{{ post.tagline }}</span></h1>
 				{% case site.excerpt %}
 				{% when "truncate_words" %}
@@ -32,7 +28,17 @@ group: home
 				<span class="teaser">{{ post.content  | split:'<!--more-->' | first }}
 				{% endcase %}
 				</span>
-				<span class="readmore"><a href="{{ post.url }}">Read More</a></span>
+				<div>
+					<div style="display: inline-block;">
+					{{ post.date | date: "%-d %B %Y" }}
+					</div> |
+
+				{% assign categories_list = post.categories %}
+				{% assign category = categories_list.first %}
+				{% include themes/Snail/category.html %}
+				{% assign categories_list = nil %}
+				| <span class="readmore"><a href="{{ post.url }}">Read More</a></span>
+				</div>
 			</div>
 		</div>
 		<div class="clearboth"></div>
